Make search box shorter to avoid help icon wrapping.

--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -238,7 +238,7 @@ footer {
   div {
     &.search {
       input {
-        width: 300px;
+        width: 280px;
         outline: none;
         padding: 10px 7px;
       }
@@ -248,7 +248,6 @@ footer {
       display: flex;
       justify-content: flex-end;
       flex: 1 0 auto;
-      margin-left: $content-padding;
 
       .blue-button {
         background: $chromium-color-dark;
